주소 카테고리 내용 추가

--- a/Front-End/html/chatbot.html
+++ b/Front-End/html/chatbot.html
@@ -59,6 +59,25 @@
             </select>
             <select id="gu" name="gu" class="form-select form-select-sm" aria-label="Small select example">
               <option selected>중랑구</option>
+              <option>금천구</option>
+              <option>성북구</option>
+              <option>성동구</option>
+              <option>은평구</option>
+              <option>종로구</option>
+              <option>서대문구</option>
+              <option>중구</option>
+              <option>용산구</option>
+              <option>마포구</option>
+              <option>강동구</option>
+              <option>송파구</option>
+              <option>강남구</option>
+              <option>서초구</option>
+              <option>동작구</option>
+              <option>관악구</option>
+              <option>영등포구</option>
+              <option>양천구</option>
+              <option>강서구</option>
+              <option>구로구</option>
             </select>
             <select class="form-select form-select-sm" aria-label="Small select example" id="dong" onchange="selectBoxChange(this.value);">
               <option selected>면목동</option>
@@ -66,6 +85,7 @@
               <option>망우동</option>
               <option>중화동</option>
               <option>신내동</option>
+              <option>상봉동</option>
             </select>
           </div>
         </div>
