--- a/Front-End/html/mypage.html
+++ b/Front-End/html/mypage.html
@@ -70,12 +70,7 @@
                             <h2>기록</h2>
                         </div>
                         <div class="card-body">
-                            <p>기록 내용이 여기에 들어갑니다.</p>
-                            <!-- Button trigger modal -->
-                           
-
-                            
-
+                            <p>대화 기록이 없습니다.</p>
                         </div>
                     </div>
                 </article>
